Updates personal twitter account

--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -34,11 +34,11 @@
 
         <footer role="contentinfo">
             <p>
-                I’m <a href="http://twitter.com/thegaw">Tyler</a>. I’m not always
+                I’m <a href="https://twitter.com/tylergaw">Tyler</a>. I’m not always
                 my greatest ally. I like to give myself little reminders about life.
                 These are them.
                 <br>
-                <a href="http://twitter.com/againwiththis">@againwiththis</a>
+                <a href="https://twitter.com/againwiththis">@againwiththis</a>
             </p>
         </footer>
 
